# CPPHead

./: .gitignore  CMakeLists.txt  README.md  main.cpp  obstacle.h  player.h
src/: main.cpp
src/engine/: draw.cpp  draw.hpp  window.cpp  window.hpp
src/game/: background.cpp  background.hpp  enemy.cpp  enemy.hpp  enemyManager.cpp  enemyManager.hpp  health.cpp  health.hpp  hitbox.hpp  level.cpp  level.hpp  levelmanager.hpp  menu.cpp  menu.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp
